--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -1,3 +1,53 @@
-- name: Demo
-  ansible.builtin.debug:
-    msg: Component - frontend
+
+#func_print_head "Copied RoboShop Config File"
+#cp roboshop.conf /etc/nginx/default.d/roboshop.conf &>>$log_file
+#func_stat_check $?
+#
+#func_print_head "Clean Old App Content"
+#rm -rf /usr/share/nginx/html/* &>>$log_file
+#func_stat_check $?
+#
+#func_print_head "Downloading App Content"
+#curl -o /tmp/frontend.zip https://roboshop-artifacts.s3.amazonaws.com/frontend.zip &>>$log_file
+#func_stat_check $?
+#
+#func_print_head "Extracting App Content"
+#cd /usr/share/nginx/html &>>$log_file
+#unzip /tmp/frontend.zip &>>$log_file
+#func_stat_check $?
+#
+#func_print_head "Starting Nginx"
+#systemctl restart nginx &>>$log_file
+#systemctl enable nginx &>>$log_file
+#func_stat_check $?
+
+- name: Install nginx
+  ansible.builtin.yum:
+    name: nginx
+    state: installed
+
+- name: Copy roboshop Config file
+  ansible.builtin.copy:
+    src: roboshop.conf
+    dest: /etc/nginx/default.d/roboshop.conf
+
+- name: Cleaning Old Content
+  ansible.builtin.file:
+    path: /usr/share/nginx/html
+    state: absent
+
+- name: Create app directory
+  ansible.builtin.file:
+    path: /usr/share/nginx/html
+    state: directory
+
+- name: Download App content
+  ansible.builtin.unarchive:
+    src: https://roboshop-artifacts.s3.amazonaws.com/frontend.zip
+    dest: /usr/share/nginx/html
+    remote_src: yes
+
+
+
+
+
