--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - name: Copy roboshop Config file
   ansible.builtin.copy:
-    src: https://github.com/Arafique458/roboshop-ansbile/blob/a9bacb546c86d20736548a83d8009fb30acb81e6/roles/frontend/file/roboshop.conf
+    src: roles/frontend/file/roboshop.conf
     dest: /etc/nginx/default.d/roboshop.conf
 
 - name: Clean Old App content
