Moved under roles

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -24,8 +24,8 @@
     dest: /usr/share/nginx/html
     remote_src: yes
 
-- name: Start Nginx
-  ansible.builtin.systemd:
+- name: Start Nginx service
+  service:
     state: restarted
     name: nginx
     enabled: true
