--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -4,8 +4,8 @@
     state: installed
 
 - name: Copy roboshop Config file
-  ansible.builtin.copy:
-    src: roles/frontend/file/roboshop.conf
+  ansible.builtin.template:
+    src: roboshop.conf
     dest: /etc/nginx/default.d/roboshop.conf
 
 - name: Clean Old App content
@@ -24,12 +24,11 @@
     dest: /usr/share/nginx/html
     remote_src: yes
 
-- name: Start nginx
-  ansible.builtin.service:
+- name: Start Nginx
+  ansible.builtin.systemd:
     state: restarted
     name: nginx
-    enabled: yes
-
+    enabled: true
 
 
 
