--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -4,8 +4,8 @@
     state: installed
 
 - name: Copy roboshop Config file
-  ansible.builtin.copy:
-    src: /frontend/files/roboshop.conf
+  ansible.builtin.templates:
+    src: roboshop.conf
     dest: /etc/nginx/default.d/roboshop.conf
 
 - name: Clean Old App content
