--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -4,7 +4,7 @@
     state: installed
 
 - name: Copy roboshop Config file
-  ansible.builtin.templates:
+  ansible.builtin.template:
     src: roboshop.conf
     dest: /etc/nginx/default.d/roboshop.conf
 
@@ -29,6 +29,7 @@
     state: restarted
     name: nginx
     enabled: true
+
 
 
 
