--- a/roles/common/tasks/app_prereq.yml
+++ b/roles/common/tasks/app_prereq.yml
@@ -1,6 +1,6 @@
 - name: Create Application User
   ansible.builtin.user:
-    name: "{{ app_user }}"
+    name: "{{app_user}}"
 
 - name: Clean Old App content
   ansible.builtin.file:
@@ -14,6 +14,6 @@
 
 - name: Download App Content
   ansible.builtin.unarchive:
-    src: https://roboshop-artifacts.s3.amazonaws.com/${{component}}.zip
+    src: https://roboshop-artifacts.s3.amazonaws.com/{{component}}.zip
     dest: /app
     remote_src: yes
