--- a/roles/common/tasks/nodjs.yml
+++ b/roles/common/tasks/nodjs.yml
@@ -1,4 +1,4 @@
-- name: Configure NodeJs repos
+- name: Configuring NodeJS repos
   ansible.builtin.shell: curl -sL https://rpm.nodesource.com/setup_lts.x | bash
 
 - name: Install NodeJS
@@ -6,13 +6,19 @@
     name: nodejs
     state: installed
 
-- name: Include task list in play
+- name: Include app_prerequisites
   ansible.builtin.import_tasks:
-      file: app_prereq.yml
+    file: app_prereq.yml
 
-- name: Install NodeJS dependecies
+- name: Install NodeJS dependencies
   ansible.builtin.shell: npm install
   args:
     chdir: /app
 
-
+#- name: Include schema setup
+#  ansible.builtin.import_tasks:
+#    file: schema_setup.yml
+#
+#- name: Include SystemD
+#  ansible.builtin.import_tasks:
+#    file: systemd_setup.yml
