--- a/roles/common/tasks/nodjs.yml
+++ b/roles/common/tasks/nodjs.yml
@@ -9,6 +9,7 @@
 - name: Include app_prerequisites
   ansible.builtin.import_tasks:
     file: app_prereq.yml
+    static: no
 
 - name: Install NodeJS dependencies
   ansible.builtin.shell: npm install
