--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -16,10 +16,10 @@
   args:
     chdir: /app
 
-#- name: Include schema setup
-#  ansible.builtin.import_tasks:
-#    file: schema_setup.yml.yml
-#
+- name: Include schema setup
+  ansible.builtin.import_tasks:
+    file: schema_setup.yml.yml
+
 #- name: Include SystemD
 #  ansible.builtin.import_tasks:
 #    file: systemd_setup.yml
