--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -18,7 +18,7 @@
 
 - name: Include schema setup
   ansible.builtin.import_tasks:
-    file: schema_setup.yml.yml
+    file: schema_setup.yml
 
 #- name: Include SystemD
 #  ansible.builtin.import_tasks:
