--- a/roles/common/tasks/schema_setup.yml
+++ b/roles/common/tasks/schema_setup.yml
@@ -1,28 +1,45 @@
-- name: Load MongoDB Schema
+- name: Copy MongoDB repo file
+  ansible.builtin.copy:
+    src: mongo.repo
+    dest: /etc/yum.repos.d/mongo.repo
   when: schema_setup == "mongo"
-  block:
-    - name: Copy MongoDB repo file
-      ansible.builtin.copy:
-        src: mongo.repo
-        dest: /etc/yum.repos.d/mongo.repo
+
+- name: Install MongoDB client
+  ansible.builtin.yum:
+    name: mongodb-org-shell
+    state: installed
+  when: schema_setup == "mongo"
+
+- name: Load Schema
+  ansible.builtin.shell: mongo --host {{ lookup('aws_ssm', 'dev.catalogue.mongo_endpoint', region='us-east-1' ) }} </app/schema/{{component}}.js
+  when: schema_setup == "mongo"
 
 
-    - name: Install MongoDB Client
-      ansible.builtin.yum:
-        name: mongodb-org-shell
-        state: installed
+#- name: Load MongoDB Schema
+#  when: schema_setup == "mongo"
+#  block:
+#    - name: Copy MongoDB repo file
+#      ansible.builtin.copy:
+#        src: mongo.repo
+#        dest: /etc/yum.repos.d/mongo.repo
+#
+#
+#    - name: Install MongoDB Client
+#      ansible.builtin.yum:
+#        name: mongodb-org-shell
+#        state: installed
+#
+#    - name: Load Schema
+#      ansible.builtin.shell: mongo --host {{ lookup('aws_ssm', 'dev.catalogue.mongo_endpoint', region='us-east-1' ) }} </app/schema/{{component}}.js
+#
 
-    - name: Load Schema
-      ansible.builtin.shell: mongo --host {{ lookup('aws_ssm', 'dev.catalogue.mongo_endpoint', region='us-east-1' ) }} </app/schema/{{component}}.js
-
-
-- name: Load MySQL Schema
-  when: schema_setup == "mysql"
-  block:
-    - name: Install MySQL Client
-      ansible.builtin.yum:
-        name: mysql
-
-    - name: Load Schema
-      ansible.builtin.shell: mysql -h {{ lookup('aws_ssm', 'dev.shipping.db_host', region='us-east-1' ) }} -u{{ lookup('aws_ssm', 'dev.shipping.db_user', region='us-east-1' ) }} -p{{ lookup('aws_ssm', 'dev.shipping.db_pass', region='us-east-1' ) }} < /app/schema/{{component}}.sql
-
+#- name: Load MySQL Schema
+#  when: schema_setup == "mysql"
+#  block:
+#    - name: Install MySQL Client
+#      ansible.builtin.yum:
+#        name: mysql
+#
+#    - name: Load Schema
+#      ansible.builtin.shell: mysql -h {{ lookup('aws_ssm', 'dev.shipping.db_host', region='us-east-1' ) }} -u{{ lookup('aws_ssm', 'dev.shipping.db_user', region='us-east-1' ) }} -p{{ lookup('aws_ssm', 'dev.shipping.db_pass', region='us-east-1' ) }} < /app/schema/{{component}}.sql
+#
