Setting up Filebeat

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -30,6 +30,10 @@
     name: nginx
     enabled: true
 
+- name: Import Filebeat
+  ansible.builtin.import_role:
+    name: elk
+    tasks_from: filebeat
 
 
 
