--- a/roles/elk/tasks/filebeat.yml
+++ b/roles/elk/tasks/filebeat.yml
@@ -1,4 +1,4 @@
-- name: copy Elastic Repo file
+- name: Copy Elastic Repo file
   ansible.builtin.templates:
     src: elastic.repo
     dest: /etc/yum.repos.d/elastic.repo
