Setting up Filebeat

--- a/roles/elk/templates/filebeat.yml
+++ b/roles/elk/templates/filebeat.yml
@@ -1,6 +1,6 @@
 filebeat.inputs:
 - type: filestream
-  id: my-filestream-id
+  id: {{ component }}
   enabled: true
   paths:
     - {{ log_file }}
