--- a/roles/common/tasks/schema_setup.yml
+++ b/roles/common/tasks/schema_setup.yml
@@ -12,7 +12,7 @@
         state: installed
 
     - name: Load Schema
-      ansible.builtin.shell: mongo --host {{ lookup('aws_ssm', '{{ env }}.{{ component }}.mongo_endpoint', region='us-east-1' ) }} </app/schema/{{ component }}.js
+      ansible.builtin.shell: mongo --host {{ lookup('aws_ssm', '{{ env }}.{{ component }}.mongo_endpoint', region='us-east-1' ) }} </app/schema/{{component}}.js
 
 - name: Load MySQL Schema
   when: schema_setup == "mysql"
@@ -21,5 +21,11 @@
       ansible.builtin.yum:
         name: mysql
 
+    - name: Check Schema
+      ansible.builtin.shell: echo 'show databases' | mysql -h {{ lookup('aws_ssm', '{{ env }}.rds.db_host', region='us-east-1' ) }}  -u{{ lookup('aws_ssm', '{{ env }}.rds.db_user', region='us-east-1' ) }} -p{{ lookup('aws_ssm', '{{ env }}.rds.db_pass', region='us-east-1' ) }} | grep cities
+      ignore_errors: yes
+      register: out
+
     - name: Load Schema
-      ansible.builtin.shell: mysql -h {{ lookup('aws_ssm', '{{ env }}.{{ component }}.db_host', region='us-east-1' ) }}  -u{{ lookup('aws_ssm', '{{ env }}.shipping.db_user', region='us-east-1' ) }} -p{{ lookup('aws_ssm', '{{ env }}.shipping.db_pass', region='us-east-1' ) }} < /app/schema/{{ component }}.sql
+      ansible.builtin.shell: mysql -h {{ lookup('aws_ssm', '{{ env }}.{{ component }}.db_host', region='us-east-1' ) }}  -u{{ lookup('aws_ssm', '{{ env }}.shipping.db_user', region='us-east-1' ) }} -p{{ lookup('aws_ssm', '{{ env }}.shipping.db_pass', region='us-east-1' ) }} < /app/schema/{{component}}.sql
+      when: out.rc != 0 or force_schema_reload
