--- a/roles/catalogue/templates/catalogue.service
+++ b/roles/catalogue/templates/catalogue.service
@@ -4,8 +4,8 @@ Description = Catalogue Service
 [Service]
 User=roboshop
 Environment={{ lookup('aws_ssm', '{{ env }}.catalogue.mongo', region='us-east-1' ) }}
-Environment=MONGO_URL="{{ lookup('aws_ssm', '{{ env }}.catalogue.mongo_url', region='us-east-1' ) }}"
-ExecStart=/bin/node/app/server.js
+Environment=MONGO_URL={{ lookup('aws_ssm', '{{ env }}.catalogue.mongo_url', region='us-east-1' ) }}
+ExecStart=/bin/node /app/server.js
 SyslogIdentifier=catalogue
 
 [Install]
